source/tests/errors/while.apex
import os
x = 10
while x == 10
os.output("Error")